vials and textures
· Color vial animated texture
· Empty vial texture
· Color vial edible

--- a/src/main/resources/assets/colormancer/lang/en_us.json
+++ b/src/main/resources/assets/colormancer/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.colormancer.ruby": "Ruby",
   "item.colormancer.raw_ruby": "Raw ruby",
   "item.colormancer.empty_vial": "Empty vial",
+  "item.colormancer.color_vial": "Concentrated dye",
 
   "itemGroup.colormancer": "Colormancer items",
 
