modelo del lectern funcionando

--- a/src/main/resources/assets/colormancer/lang/en_us.json
+++ b/src/main/resources/assets/colormancer/lang/en_us.json
@@ -14,6 +14,8 @@
   "effect.colormancer.magenta": "Magenta Freedom",
   "effect.colormancer.yellow": "Yellow Soul",
   "effect.colormancer.black": "Black Strength",
-  "effect.colormancer.white": "White Sickness"
+  "effect.colormancer.white": "White Sickness",
+
+  "block.colormancer.colormancer_lectern": "Colormancer lectern"
 
 }
