--- a/src/main/resources/assets/colormancer/lang/en_us.json
+++ b/src/main/resources/assets/colormancer/lang/en_us.json
@@ -1,9 +1,7 @@
 {
-  "item.colormancer.ruby": "Ruby",
-  "item.colormancer.raw_ruby": "Raw ruby",
   "item.colormancer.empty_vial": "Empty vial",
   "item.colormancer.water_vial": "Water vial",
-  "item.colormancer.color_vial": "Concentrated dye",
+  "item.colormancer.color_vial": "Concentrated color",
   "item.colormancer.dye_mixture": "Dye mixture",
   "item.colormancer.pigments": "Pigments",
 
