Added Colormancer Book and Interaction
- Added Vademecum Cromaticus (does nothing)
- Added interactinon between Vademecum Cromaticus and Colormancer Lectern

--- a/src/main/resources/assets/colormancer/lang/en_us.json
+++ b/src/main/resources/assets/colormancer/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.colormancer.color_vial": "Concentrated color",
   "item.colormancer.dye_mixture": "Dye mixture",
   "item.colormancer.pigments": "Pigments",
+  "item.colormancer.colormancer_book": "Vademecum Cromaticus",
 
   "itemGroup.colormancer": "Colormancer items",
 
