lectern gui working!
Lectern GUI is currently working but logic is to be implemented

--- a/src/main/resources/assets/colormancer/lang/en_us.json
+++ b/src/main/resources/assets/colormancer/lang/en_us.json
@@ -17,6 +17,8 @@
 
   "block.colormancer.colormancer_lectern": "Colormancer lectern",
 
+  "gui.colormancer.colormancer_lectern": "Colormancer lectern",
+
   "advancements.colormancer.root.title": "Colormancer",
   "advancements.colormancer.root.description": "Become a Colormancer"
 
